# fastapi_job_finder

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  pytest.ini  test_db.db
backend/api/: base.py
backend/api/v1/: route_general_pages.py  route_jobs.py  route_users.py
backend/config/: settings.py
backend/database/: session.py
backend/database/models/: jobs.py  users.py
backend/database/repository/: __init__.py  jobs.py  users.py
backend/templates/shared/: base.html
backend/tests/: conftest.py
backend/tests/v1/: constants.py
backend/tests/v1/test_routes/: test_jobs.py  test_users.py
nginx/: Dockerfile  nginx.conf  nginx.conf.esh
