[tool.poetry]
name = "job_finder"
version = "0.1.0"
description = ""
authors = ["Nikita Isaev <nikita.isaev.yr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
alembic = "^1.8.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.9.1"}
pytest = "^7.1.2"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
